# wifi_manager_pro_v2

./: .gitignore  CMakeLists.txt  README.md  build_log.txt  error_compilacion.txt  sdkconfig
main/: CMakeLists.txt  dns_server.c  dns_server.h  http_server.c  http_server.h  led_status.c  led_status.h  main.c  storage_nvs.c  storage_nvs.h  system_state.c  system_state.h  wifi_manager.c  wifi_manager.h  wifi_provisioning.c  wifi_provisioning.h  wifi_scanner.c  wifi_scanner.h
